--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,16 @@
-
+<h1>Catelera</h1>
 <div class="row"  *ngIf="movies.length > 0">
     <div class="col">
 
         <app-slideshow [movies]="movies"></app-slideshow>
     </div>
     
+</div>
+
+<h1 class="mt-5">Peliculas</h1>
+<div class="row"  *ngIf="movies.length > 0">
+    <div class="col">
+        <app-peliculas-poster-grip [movies]="movies"></app-peliculas-poster-grip>
+
+    </div>
 </div>
