--- a/src/app/components/peliculas-poster-grip/peliculas-poster-grip.component.html
+++ b/src/app/components/peliculas-poster-grip/peliculas-poster-grip.component.html
@@ -7,10 +7,20 @@
 
             <div class="row">
                 <div class="col-10 text-white">
-                  ************
+                    
+                    <star-rating 
+                    class="star.half"
+                    [value] = movie.vote_average
+                    [totalstars]="10" 
+                    checkedcolor="gold" 
+                    uncheckedcolor="grey" 
+                    size="14px" 
+                    readonly="true" 
+                    ></star-rating>
+               
                 </div>
                 <div class="col-2 text-white">
-                    {{ movie.vote_average }}
+                    {{ movie.vote_average | number:'1.1'}}
                 </div>
             </div>
         </div>
