--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,15 +2,14 @@
 <div class="row"  *ngIf="movies.length > 0">
     <div class="col">
 
-        <app-slideshow [movies]="movies"></app-slideshow>
+        <app-slideshow [movies]="moviesSlideswhow"></app-slideshow>
     </div>
     
 </div>
 
 <h1 class="mt-5">Peliculas</h1>
-<div class="row"  *ngIf="movies.length > 0">
-    <div class="col">
-        <app-peliculas-poster-grip [movies]="movies"></app-peliculas-poster-grip>
 
-    </div>
-</div>
+   
+        <app-peliculas-poster-grip  *ngIf="movies.length > 0" [movies]="movies"></app-peliculas-poster-grip>
+
+    
