--- a/src/app/components/slideshow/slideshow.component.html
+++ b/src/app/components/slideshow/slideshow.component.html
@@ -13,7 +13,7 @@
             <div class="movie-description">
                 <h3>{{ movie.title }}</h3>
                 <p>
-                    {{ movie.overview | slice:0:130 }}
+                   {{ movie.overview }}
                 </p>
             </div>
 
