--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,10 +7,12 @@
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
          
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+        <div class="d-flex">
+          <input #txtBucar
+          (keyup.enter)="buscarPeliculas( txtBucar.value )"
+           class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button (click)="buscarPeliculas( txtBucar.value)" class="btn btn-outline-success" type="submit">Search</button>
+        </div>
       </div>
     </div>
   </nav>
