--- a/src/app/pages/buscar/buscar.component.html
+++ b/src/app/pages/buscar/buscar.component.html
@@ -1,1 +1,10 @@
-<p>buscar works!</p>
+<h1>Buscar Peliculas <small class="text-capitalize" >{{ texto }}</small></h1>
+
+
+<div class="row">
+    <div class="col">
+
+        <app-peliculas-poster-grip  [movies]="movies"></app-peliculas-poster-grip>
+       
+    </div>
+</div>
